--- a/notebooks/battery_charging.ipynb
+++ b/notebooks/battery_charging.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ef66bee4",
    "metadata": {},
    "outputs": [],
@@ -63,19 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ed6d3e13",
    "metadata": {},
    "outputs": [],
    "source": [
     "# os.environ[\"PROJECT_DIR\"] = 'something_path' # Cghange this path to your project directory.\n",
     "\n",
-    "file_path = os.path.join('..', 'data', 'raw', 'EV-Population', 'Electric_Vehicle_Population_Data.csv')"
+    "file_path = os.path.join('..', 'data', 'raw', 'EV-BAT-CHARGING', 'ev_battery_charging_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "9269b455",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "10058428",
    "metadata": {},
    "outputs": [
@@ -118,175 +118,137 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>VIN (1-10)</th>\n",
-       "      <th>County</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>Postal Code</th>\n",
-       "      <th>Model Year</th>\n",
-       "      <th>Make</th>\n",
-       "      <th>Model</th>\n",
-       "      <th>Electric Vehicle Type</th>\n",
-       "      <th>Clean Alternative Fuel Vehicle (CAFV) Eligibility</th>\n",
-       "      <th>Electric Range</th>\n",
-       "      <th>Base MSRP</th>\n",
-       "      <th>Legislative District</th>\n",
-       "      <th>DOL Vehicle ID</th>\n",
-       "      <th>Vehicle Location</th>\n",
-       "      <th>Electric Utility</th>\n",
-       "      <th>2020 Census Tract</th>\n",
+       "      <th>SOC (%)</th>\n",
+       "      <th>Voltage (V)</th>\n",
+       "      <th>Current (A)</th>\n",
+       "      <th>Battery Temp (°C)</th>\n",
+       "      <th>Ambient Temp (°C)</th>\n",
+       "      <th>Charging Duration (min)</th>\n",
+       "      <th>Degradation Rate (%)</th>\n",
+       "      <th>Charging Mode</th>\n",
+       "      <th>Efficiency (%)</th>\n",
+       "      <th>Battery Type</th>\n",
+       "      <th>Charging Cycles</th>\n",
+       "      <th>EV Model</th>\n",
+       "      <th>Optimal Charging Duration Class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5YJYGDEE1L</td>\n",
-       "      <td>King</td>\n",
-       "      <td>Seattle</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>98122.0</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL Y</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>291</td>\n",
-       "      <td>0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>125701579</td>\n",
-       "      <td>POINT (-122.30839 47.610365)</td>\n",
-       "      <td>CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)</td>\n",
-       "      <td>5.303301e+10</td>\n",
+       "      <td>43.708611</td>\n",
+       "      <td>3.629593</td>\n",
+       "      <td>33.553512</td>\n",
+       "      <td>33.454060</td>\n",
+       "      <td>26.439918</td>\n",
+       "      <td>59.363552</td>\n",
+       "      <td>8.805096</td>\n",
+       "      <td>Fast</td>\n",
+       "      <td>98.238981</td>\n",
+       "      <td>Li-ion</td>\n",
+       "      <td>112</td>\n",
+       "      <td>Model B</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7SAYGDEE9P</td>\n",
-       "      <td>Snohomish</td>\n",
-       "      <td>Bothell</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>98021.0</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL Y</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Eligibility unknown as battery range has not b...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>244285107</td>\n",
-       "      <td>POINT (-122.179458 47.802589)</td>\n",
-       "      <td>PUGET SOUND ENERGY INC</td>\n",
-       "      <td>5.306105e+10</td>\n",
+       "      <td>95.564288</td>\n",
+       "      <td>3.879331</td>\n",
+       "      <td>32.228092</td>\n",
+       "      <td>35.933628</td>\n",
+       "      <td>31.108647</td>\n",
+       "      <td>67.343566</td>\n",
+       "      <td>12.186860</td>\n",
+       "      <td>Fast</td>\n",
+       "      <td>97.562628</td>\n",
+       "      <td>LiFePO4</td>\n",
+       "      <td>398</td>\n",
+       "      <td>Model A</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5YJSA1E4XK</td>\n",
-       "      <td>King</td>\n",
-       "      <td>Seattle</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>98109.0</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL S</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>270</td>\n",
-       "      <td>0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>156773144</td>\n",
-       "      <td>POINT (-122.34848 47.632405)</td>\n",
-       "      <td>CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)</td>\n",
-       "      <td>5.303301e+10</td>\n",
+       "      <td>75.879455</td>\n",
+       "      <td>4.111062</td>\n",
+       "      <td>91.562912</td>\n",
+       "      <td>25.009358</td>\n",
+       "      <td>30.203219</td>\n",
+       "      <td>105.454739</td>\n",
+       "      <td>13.832336</td>\n",
+       "      <td>Slow</td>\n",
+       "      <td>97.233533</td>\n",
+       "      <td>LiFePO4</td>\n",
+       "      <td>175</td>\n",
+       "      <td>Model A</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>5YJSA1E27G</td>\n",
-       "      <td>King</td>\n",
-       "      <td>Issaquah</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>98027.0</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL S</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Clean Alternative Fuel Vehicle Eligible</td>\n",
-       "      <td>210</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>165103011</td>\n",
-       "      <td>POINT (-122.03646 47.534065)</td>\n",
-       "      <td>PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)</td>\n",
-       "      <td>5.303303e+10</td>\n",
+       "      <td>63.879264</td>\n",
+       "      <td>4.012557</td>\n",
+       "      <td>32.459158</td>\n",
+       "      <td>32.497482</td>\n",
+       "      <td>18.077998</td>\n",
+       "      <td>54.000439</td>\n",
+       "      <td>9.318874</td>\n",
+       "      <td>Fast</td>\n",
+       "      <td>98.136225</td>\n",
+       "      <td>LiFePO4</td>\n",
+       "      <td>150</td>\n",
+       "      <td>Model B</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5YJYGDEE5M</td>\n",
-       "      <td>Kitsap</td>\n",
-       "      <td>Suquamish</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>98392.0</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>TESLA</td>\n",
-       "      <td>MODEL Y</td>\n",
-       "      <td>Battery Electric Vehicle (BEV)</td>\n",
-       "      <td>Eligibility unknown as battery range has not b...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>205138552</td>\n",
-       "      <td>POINT (-122.55717 47.733415)</td>\n",
-       "      <td>PUGET SOUND ENERGY INC</td>\n",
-       "      <td>5.303594e+10</td>\n",
+       "      <td>24.041678</td>\n",
+       "      <td>4.064593</td>\n",
+       "      <td>34.475475</td>\n",
+       "      <td>31.434920</td>\n",
+       "      <td>17.984989</td>\n",
+       "      <td>106.964968</td>\n",
+       "      <td>11.687577</td>\n",
+       "      <td>Fast</td>\n",
+       "      <td>97.662485</td>\n",
+       "      <td>Li-ion</td>\n",
+       "      <td>886</td>\n",
+       "      <td>Model C</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   VIN (1-10)     County       City State  Postal Code  Model Year   Make  \\\n",
-       "0  5YJYGDEE1L       King    Seattle    WA      98122.0        2020  TESLA   \n",
-       "1  7SAYGDEE9P  Snohomish    Bothell    WA      98021.0        2023  TESLA   \n",
-       "2  5YJSA1E4XK       King    Seattle    WA      98109.0        2019  TESLA   \n",
-       "3  5YJSA1E27G       King   Issaquah    WA      98027.0        2016  TESLA   \n",
-       "4  5YJYGDEE5M     Kitsap  Suquamish    WA      98392.0        2021  TESLA   \n",
+       "     SOC (%)  Voltage (V)  Current (A)  Battery Temp (°C)  Ambient Temp (°C)  \\\n",
+       "0  43.708611     3.629593    33.553512          33.454060          26.439918   \n",
+       "1  95.564288     3.879331    32.228092          35.933628          31.108647   \n",
+       "2  75.879455     4.111062    91.562912          25.009358          30.203219   \n",
+       "3  63.879264     4.012557    32.459158          32.497482          18.077998   \n",
+       "4  24.041678     4.064593    34.475475          31.434920          17.984989   \n",
        "\n",
-       "     Model           Electric Vehicle Type  \\\n",
-       "0  MODEL Y  Battery Electric Vehicle (BEV)   \n",
-       "1  MODEL Y  Battery Electric Vehicle (BEV)   \n",
-       "2  MODEL S  Battery Electric Vehicle (BEV)   \n",
-       "3  MODEL S  Battery Electric Vehicle (BEV)   \n",
-       "4  MODEL Y  Battery Electric Vehicle (BEV)   \n",
+       "   Charging Duration (min)  Degradation Rate (%) Charging Mode  \\\n",
+       "0                59.363552              8.805096          Fast   \n",
+       "1                67.343566             12.186860          Fast   \n",
+       "2               105.454739             13.832336          Slow   \n",
+       "3                54.000439              9.318874          Fast   \n",
+       "4               106.964968             11.687577          Fast   \n",
        "\n",
-       "   Clean Alternative Fuel Vehicle (CAFV) Eligibility  Electric Range  \\\n",
-       "0            Clean Alternative Fuel Vehicle Eligible             291   \n",
-       "1  Eligibility unknown as battery range has not b...               0   \n",
-       "2            Clean Alternative Fuel Vehicle Eligible             270   \n",
-       "3            Clean Alternative Fuel Vehicle Eligible             210   \n",
-       "4  Eligibility unknown as battery range has not b...               0   \n",
+       "   Efficiency (%) Battery Type  Charging Cycles EV Model  \\\n",
+       "0       98.238981       Li-ion              112  Model B   \n",
+       "1       97.562628      LiFePO4              398  Model A   \n",
+       "2       97.233533      LiFePO4              175  Model A   \n",
+       "3       98.136225      LiFePO4              150  Model B   \n",
+       "4       97.662485       Li-ion              886  Model C   \n",
        "\n",
-       "   Base MSRP  Legislative District  DOL Vehicle ID  \\\n",
-       "0          0                  37.0       125701579   \n",
-       "1          0                   1.0       244285107   \n",
-       "2          0                  36.0       156773144   \n",
-       "3          0                   5.0       165103011   \n",
-       "4          0                  23.0       205138552   \n",
-       "\n",
-       "                Vehicle Location  \\\n",
-       "0   POINT (-122.30839 47.610365)   \n",
-       "1  POINT (-122.179458 47.802589)   \n",
-       "2   POINT (-122.34848 47.632405)   \n",
-       "3   POINT (-122.03646 47.534065)   \n",
-       "4   POINT (-122.55717 47.733415)   \n",
-       "\n",
-       "                                Electric Utility  2020 Census Tract  \n",
-       "0   CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)       5.303301e+10  \n",
-       "1                         PUGET SOUND ENERGY INC       5.306105e+10  \n",
-       "2   CITY OF SEATTLE - (WA)|CITY OF TACOMA - (WA)       5.303301e+10  \n",
-       "3  PUGET SOUND ENERGY INC||CITY OF TACOMA - (WA)       5.303303e+10  \n",
-       "4                         PUGET SOUND ENERGY INC       5.303594e+10  "
+       "   Optimal Charging Duration Class  \n",
+       "0                                1  \n",
+       "1                                1  \n",
+       "2                                2  \n",
+       "3                                1  \n",
+       "4                                2  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "7e795d8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(177866, 17)"
+       "(1000, 13)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "27df0e7d",
    "metadata": {},
    "outputs": [
@@ -343,29 +305,25 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 177866 entries, 0 to 177865\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column                                             Non-Null Count   Dtype  \n",
-      "---  ------                                             --------------   -----  \n",
-      " 0   VIN (1-10)                                         177866 non-null  object \n",
-      " 1   County                                             177861 non-null  object \n",
-      " 2   City                                               177861 non-null  object \n",
-      " 3   State                                              177866 non-null  object \n",
-      " 4   Postal Code                                        177861 non-null  float64\n",
-      " 5   Model Year                                         177866 non-null  int64  \n",
-      " 6   Make                                               177866 non-null  object \n",
-      " 7   Model                                              177866 non-null  object \n",
-      " 8   Electric Vehicle Type                              177866 non-null  object \n",
-      " 9   Clean Alternative Fuel Vehicle (CAFV) Eligibility  177866 non-null  object \n",
-      " 10  Electric Range                                     177866 non-null  int64  \n",
-      " 11  Base MSRP                                          177866 non-null  int64  \n",
-      " 12  Legislative District                               177477 non-null  float64\n",
-      " 13  DOL Vehicle ID                                     177866 non-null  int64  \n",
-      " 14  Vehicle Location                                   177857 non-null  object \n",
-      " 15  Electric Utility                                   177861 non-null  object \n",
-      " 16  2020 Census Tract                                  177861 non-null  float64\n",
-      "dtypes: float64(3), int64(4), object(10)\n",
-      "memory usage: 23.1+ MB\n"
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                           Non-Null Count  Dtype  \n",
+      "---  ------                           --------------  -----  \n",
+      " 0   SOC (%)                          1000 non-null   float64\n",
+      " 1   Voltage (V)                      1000 non-null   float64\n",
+      " 2   Current (A)                      1000 non-null   float64\n",
+      " 3   Battery Temp (°C)                1000 non-null   float64\n",
+      " 4   Ambient Temp (°C)                1000 non-null   float64\n",
+      " 5   Charging Duration (min)          1000 non-null   float64\n",
+      " 6   Degradation Rate (%)             1000 non-null   float64\n",
+      " 7   Charging Mode                    1000 non-null   object \n",
+      " 8   Efficiency (%)                   1000 non-null   float64\n",
+      " 9   Battery Type                     1000 non-null   object \n",
+      " 10  Charging Cycles                  1000 non-null   int64  \n",
+      " 11  EV Model                         1000 non-null   object \n",
+      " 12  Optimal Charging Duration Class  1000 non-null   int64  \n",
+      "dtypes: float64(8), int64(2), object(3)\n",
+      "memory usage: 101.7+ KB\n"
      ]
     }
    ],
@@ -391,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "dd516aba",
    "metadata": {},
    "outputs": [
@@ -532,7 +490,7 @@
        "max               49.000000    4.792548e+08       5.603300e+10  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +503,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fdb3c774",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "291e735d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "183d97c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190273f6",
    "metadata": {},
    "outputs": [],
    "source": []
